--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ limbaje informatic si artistic se dezvolta. </p>
 
 <nav class="nav-side">
 	<div class="Meniu">
-		<a href="Index.html" class="active">Acasa</a>
+		<a href="index.html" class="active">Acasa</a>
 		<div class="dropdown">
 		<button class="buton" > Despre Arta Digitala </button>
 			<div class="content">
