--- a/LogFormPage.html
+++ b/LogFormPage.html
@@ -35,7 +35,7 @@
 				<label class="form-check-label" for="exampleCheck1">Rămâi conectat(ă)</label>
 			  </div>
 			  
-			  <a href="Index.html" class="btn btn-primary btn-block">Conectează-te</a>
+			  <a href="index.html" class="btn btn-primary btn-block">Conectează-te</a>
 
 			</form>
 		</section>
