--- a/TextPage2.html
+++ b/TextPage2.html
@@ -24,7 +24,7 @@
 </div>
 <nav class="nav-side">
 	<div class="Meniu">
-	<a href="Index.html" class="active">Acasa</a>
+	<a href="index.html" class="active">Acasa</a>
 		<div class="dropdown">
 		<button class="buton" > Despre Arta Digitala </button>
 			<div class="content">
